--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -102,6 +102,9 @@
         "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
         "when a user tries to pick up one of cards.\n\n"
     </string>
+    <string name="soyuz">Союз-2</string>
+    <string name="show_description">Показать описание</string>
+    <string name="on_photo">На фото Запуск ракетоносителя \"Союз-2\"</string>
 
 
 </resources>
