--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,6 +105,11 @@
     <string name="soyuz">Союз-2</string>
     <string name="show_description">Показать описание</string>
     <string name="on_photo">На фото Запуск ракетоносителя \"Союз-2\"</string>
+    <string name="mars_description">Марс -- четвёртая по удалённости от Солнца и седьмая по размерам планета Солнечной системы. Названа в честь Марса -- древнеримского бога войны, соответствующего древнегреческому Аресу. Иногда Марс называют «красной планетой» из-за красноватого оттенка поверхности, придаваемого ей минералом маггемитом (оксидом железа).</string>
+    <string name="mars">Mars</string>
+    <string name="title">Title</string>
+    <string name="earth">Earth</string>
+    <string name="earth_description">Description</string>
 
 
 </resources>
